--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -2,6 +2,7 @@
 import type { GetStaticPaths } from "astro";
 import type { SanityDocument } from "@sanity/client";
 import { loadQuery } from "../../sanity/lib/load-query";
+import PortableText from "../../components/PortableText.astro";
 
 export async function getStaticPaths() {
   const { data: posts } = await loadQuery<SanityDocument[]>({
@@ -19,10 +20,11 @@ export async function getStaticPaths() {
 
 const { params } = Astro;
 
-const { data: post }: any = await loadQuery({
+const { data: post }: any = await loadQuery<{ title: string; body: any[] }>({
   query: `*[_type == "post" && slug.current == $slug][0]`,
   params,
 });
 ---
 
 <h1>A post about {post.title}</h1>
+<PortableText portableText={post.body} />
