--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
-<!-- ---
-import  {VisualEditing}  from "@sanity/visual-editing/astro"
+---
+import NavBar from "../components/NavBar.astro";
 
 export type props = {
   title: string;
@@ -15,10 +15,10 @@ const visualEditingEnabled =
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
+    <title>Main Street Percussion</title>
   </head>
   <body>
+    <NavBar />
     <slot />
-    <VisualEditing enabled={visualEditingEnabled} />
   </body>
-</html> -->
+</html>
