--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -1,8 +1,8 @@
 ---
-import type { GetStaticPaths } from "astro";
 import type { SanityDocument } from "@sanity/client";
 import { loadQuery } from "../../sanity/lib/load-query";
 import PortableText from "../../components/PortableText.astro";
+import Layout from "../../layouts/Layout.astro";
 
 export async function getStaticPaths() {
   const { data: posts } = await loadQuery<SanityDocument[]>({
@@ -26,5 +26,7 @@ const { data: post }: any = await loadQuery<{ title: string; body: any[] }>({
 });
 ---
 
-<h1>A post about {post.title}</h1>
-<PortableText portableText={post.body} />
+<Layout>
+  <h1>A post about {post.title}</h1>
+  <PortableText portableText={post.body} />
+</Layout>
