adds TailwindCSS and Instrument post-type

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ const visualEditingEnabled =
     <meta name="generator" content={Astro.generator} />
     <title>Main Street Percussion</title>
   </head>
-  <body>
+  <body class="bg-slate-100 m-4 md:m-10">
     <NavBar />
     <slot />
   </body>
