--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -7,5 +7,6 @@
     <li><a href="/">Home</a></li>
     <li><a href="/categories">Categories</a></li>
     <li><a href="/about">About</a></li>
+    <li><a href="/contact">Contact</a></li>
   </ul>
 </nav>
