--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,7 @@
 ---
-
+import Layout from "../layouts/Layout.astro";
 ---
 
-<h1>About!</h1>
+<Layout>
+  <h1 class="text-2xl my-4 flex justify-center">About Page</h1>
+</Layout>
