--- a/src/pages/category/[slug].astro
+++ b/src/pages/category/[slug].astro
@@ -29,29 +29,46 @@ const { data: category }: any = await loadQuery<{ title: string; body: any[] }>(
 );
 
 const instruments = await sanityClient.fetch(
-  `*[_type == "post" && references(*[_type == "category" && lower(title) == "${category.title}"]._id)]`
+  `*[_type == "instrument" && references(*[_type == "category" && lower(title) == "${category.title}"]._id)]`
 );
 
-console.log(category);
-console.log(instruments);
-console.log(category.title);
 ---
 
 <Layout>
-  <h1>
-    This is a category page. The catgory is
+  <h1 class="text-2xl my-4 flex justify-center">
+    All
     {category.title}
   </h1>
   <PortableText portableText={category.body} />
 
   <ul>
-    {
-      instruments.map((i: { _id: any; title: string; slug: any }) => (
-        <li>
-          <a href={`/post/${i.slug.current}`}>{i.title}</a>
-          {i.title}
-        </li>
-      ))
-    }
-  </ul>
+  <div class="instrument-list grid grid-cols-3 gap-2 text-sm md:text-base">
+    <div class="font-bold">Name</div>
+    <div class="flex justify-end font-bold">Daily Rate</div>
+    <div class="flex justify-end font-bold text-right">est. Weekly Rate</div>
+      {
+        instruments.map(
+          (i: {
+            _id: any;
+            title: string;
+            slug: any;
+            estimatedWeeklyRate: string;
+            dailyRate: string;
+          }) => (
+            
+            <li class="">
+              <a href={`/instrument/${i.slug.current}`}>{i.title}</a>
+            </li>
+            <div class="flex justify-end items-center text-sm md:text-base">
+              {`$${i.dailyRate}.00`}
+            </div>
+            <div class="flex justify-end items-center text-sm md:text-base">
+              {`$${i.estimatedWeeklyRate}.00`}
+            </div>
+            
+          )
+        )
+      }
+  </div>
+</ul>
 </Layout>
