--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,8 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-  <h1>Main Street Percussion</h1>
+  <div class="header flex justify-center">
+    <h1 class="text-2xl my-4 flex justify-center">Main Street Percussion</h1>
+  </div>
+  <p>This is the home page</p>
 </Layout>
