adds cards to categories and styles about page

--- a/src/components/TopNav.astro
+++ b/src/components/TopNav.astro
@@ -29,7 +29,7 @@
       </li>
       <li>
         <a class="text-sm text-gray-400 hover:text-gray-500" href="/about"
-          >About</a
+          >Rental Policy</a
         >
       </li>
       <li>
@@ -81,7 +81,7 @@
           <li class="mb-1">
             <a
               class="block p-4 text-sm font-semibold text-gray-400 hover:bg-green-50 hover:text-green-600 rounded"
-              href="/about">About</a
+              href="/about">Rental Policy</a
             >
           </li>
           <li class="mb-1">
