fixes responsiveness and card layout on Categories page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,16 @@
 <div class="w-full bg-slate-100 h-24 flex justify-center items-center">
+  <svg
+    width="230"
+    height="auto"
+    viewBox="0 0 430 481"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+  >
+    <path
+      fill-rule="evenodd"
+      clip-rule="evenodd"
+      d="M215 266C288.454 266 348 206.454 348 133C348 107.736 340.956 84.1167 328.724 64H430V481H0V64H101.276C89.0443 84.1167 82 107.736 82 133C82 206.454 141.546 266 215 266ZM101.276 64C124.607 25.6289 166.81 0 215 0C263.19 0 305.393 25.6289 328.724 64H101.276Z"
+      fill="#F66767"></path>
+  </svg>
   <p>&copy; <a href="/">Main Street Percussion</a></p>
 </div>
