--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,44 +2,23 @@
 import Layout from "../layouts/Layout.astro";
 import SnareDrum from "../assets/snare-drum.jpg";
 import { Image } from "astro:assets";
-import Footer from "../components/Footer.astro";
+
 import "../styles/global.css";
 ---
 
 <Layout>
-  <section id="hero-1426">
-    <div class="cs-container">
-      <div class="cs-content">
-        <div class="p-6 bg-slate-800 bg-opacity-60">
-          <span class="cs-topper"> est. 2022</span>
-          <h1 class="cs-title">
-            Nashville's Premier Percussion Rental Service
-          </h1>
-
-          <div class="cs-button-group">
-            <a href="" class="cs-button-solid cs-button1">Browse Rentals</a>
-            <a href="" class="cs-button-solid cs-button2">Get In Touch</a>
-          </div>
-        </div>
+  <section class="section-1">
+    <div class="text-box w-3/ rounded:sm p-4">
+      <h1 class="border-b-2 border-b-slate-100 inline-block">
+        Main Street Percussion
+      </h1>
+      <div class="pt-4">
+        <p>THE PREMIER PERCUSSION RENTAL SERVICE IN THE SOUTHEAST</p>
+        <p>BASED IN NASHVILLE, TN</p>
+        <p>EST. 2022</p>
       </div>
     </div>
-
-    <!-- Background Image -->
-    <picture class="cs-background">
-      <source media="(max-width: 600px)" :srcset={SnareDrum} />
-      <source media="(min-width: 601px)" :srcset={SnareDrum} />
-      <Image
-        loading="lazy"
-        decoding="async"
-        src={SnareDrum}
-        alt="field"
-        width="1920"
-        height="1000"
-        aria-hidden="true"
-      />
-    </picture>
   </section>
-  <section></section>
 </Layout>
 
 <style scoped>
@@ -49,142 +28,34 @@ import "../styles/global.css";
 
   /* Mobile - 360px */
   @media only screen and (min-width: 0rem) {
-    #hero-1426 {
-      /* Centers button */
-      text-align: center;
-      /* 200px - 300px - leaving extra space for the navigation */
-      padding: clamp(12.5rem, 25.95vw, 18.75em) 1rem;
-      /* prevents the topper line from causing an overflow */
-      overflow: hidden;
-      position: relative;
-      z-index: 1;
-    }
-    #hero-1426 .cs-background {
+    .section-1 {
+      height: 600px;
       width: 100%;
-      height: 100%;
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: -2;
-    }
-    #hero-1426 .cs-background:before {
-      /* Overlay */
-      content: "";
-      width: 100%;
-      height: 100%;
-      background: #000;
-      opacity: 0.48;
-      position: absolute;
-      display: block;
-      top: 0;
-      left: 0;
-      z-index: 1;
-      /* prevents the cursor from interacting with it */
-      pointer-events: none;
-    }
-    #hero-1426 .cs-background img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      object-fit: cover;
-    }
-    #hero-1426 .cs-container {
-      width: 100%;
-      max-width: 80rem;
-      margin: auto;
+      color: #d9d9d9;
+      /* background-color: #218c5c; */
+      background:
+        linear-gradient(rgba(33, 140, 92, 0.75), rgba(33, 140, 92, 0.75)),
+        url("../assets/snare-drum.jpg") center/cover no-repeat;
+      /* background-size: cover;
+      background-repeat: no-repeat;
+      background-position: 0% 40%;
+      background-blend-mode: multiply; */
+
       display: flex;
-      flex-wrap: wrap;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      gap: 3rem;
     }
-    #hero-1426 .cs-content {
-      width: 100%;
-      max-width: 39.375rem;
-    }
-    #hero-1426 .cs-topper {
-      /* 13px - 16px */
-      font-size: clamp(0.8125rem, 1.5vw, 1rem);
-      line-height: 1.2em;
+
+    h1 {
+      font-size: 3rem;
       font-weight: 700;
-      letter-spacing: 0.1em;
-      text-align: center;
-      text-transform: uppercase;
-      margin-bottom: 1rem;
-      color: var(--nscYellow);
-      display: inline-block;
-      position: relative;
     }
-    #hero-1426 .cs-title {
-      /* 39px - 61px */
-      font-size: clamp(2.4375rem, 6.4vw, 3.8125rem);
-      font-weight: 700;
-      line-height: 1.2em;
-      text-align: center;
-      max-width: 51.8125rem;
-      color: #fff;
-      position: relative;
-    }
-    #hero-1426 .cs-text {
-      /* 16px - 20px */
-      font-size: clamp(1rem, 1.95vw, 1.25rem);
-      line-height: 1.5em;
-      text-align: center;
-      width: 100%;
-      /* 464px - 622px */
-      max-width: clamp(29rem, 60vw, 38.785rem);
-      margin: 0 auto 0;
-      margin-bottom: 2rem;
-      color: #fff;
-    }
-    #hero-1426 .cs-button-group {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 0.5rem;
-    }
-    #hero-1426 .cs-button-solid {
+
+    p {
       font-size: 1rem;
-      /* 46px - 56px */
-      line-height: clamp(2.875rem, 5.5vw, 3.5rem);
-      text-decoration: none;
-      font-weight: 700;
-      text-align: center;
-      margin: 0;
-      color: #fff;
-      min-width: 12.5rem;
-      padding: 0 1.5rem;
-      background-color: var(--nscBlueLight);
-      border-radius: 0.5rem;
-      display: inline-block;
-      position: relative;
-      z-index: 1;
-      /* prevents padding from adding to the width */
-      box-sizing: border-box;
-    }
-    #hero-1426 .cs-button-solid:before {
-      content: "";
-      position: absolute;
-      height: 100%;
-      width: 0%;
-      background: var(--nscDarkGrey);
-      color: #fff;
-      opacity: 1;
-      top: 0;
-      left: 0;
-      z-index: -1;
-      border-radius: 0.5rem;
-      transition: width 0.3s;
-    }
-    #hero-1426 .cs-button-solid:hover:before {
-      width: 100%;
-      color: #fff;
-    }
-    #hero-1426 .cs-button1 {
-      background-color: var(--secondary);
+      letter-spacing: 0.05em;
+      font-weight: 600;
     }
   }
 </style>
