--- a/src/components/TopNav.astro
+++ b/src/components/TopNav.astro
@@ -25,15 +25,15 @@
       class="hidden absolute top-1/2 left-1/2 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6"
     >
       <li>
-        <a class="text-sm text-gray-400 hover:text-gray-500" href="/">Home</a>
+        <a class="text-lg text-gray-800 hover:text-gray-500" href="/">Home</a>
       </li>
       <li>
-        <a class="text-sm text-gray-400 hover:text-gray-500" href="/about"
+        <a class="text-lg text-gray-800 hover:text-gray-500" href="/about"
           >Rental Policy</a
         >
       </li>
       <li>
-        <a class="text-sm text-gray-400 hover:text-gray-500" href="/categories"
+        <a class="text-lg text-gray-800 hover:text-gray-500" href="/categories"
           >Categories</a
         >
       </li>
@@ -74,19 +74,19 @@
         <ul>
           <li class="mb-1">
             <a
-              class="block p-4 text-sm font-semibold text-gray-400 hover:bg-green-50 hover:text-green-600 rounded"
+              class="block p-4 text-lg font-semibold text-gray-400 hover:bg-green-50 hover:text-green-600 rounded"
               href="/">Home</a
             >
           </li>
           <li class="mb-1">
             <a
-              class="block p-4 text-sm font-semibold text-gray-400 hover:bg-green-50 hover:text-green-600 rounded"
+              class="block p-4 text-lg font-semibold text-gray-400 hover:bg-green-50 hover:text-green-600 rounded"
               href="/about">Rental Policy</a
             >
           </li>
           <li class="mb-1">
             <a
-              class="block p-4 text-sm font-semibold text-gray-400 hover:bg-green-50 hover:text-green-600 rounded"
+              class="block p-4 text-lg font-semibold text-gray-400 hover:bg-green-50 hover:text-green-600 rounded"
               href="/categories">Categories</a
             >
           </li>
