--- a/src/components/TopNav.astro
+++ b/src/components/TopNav.astro
@@ -10,7 +10,7 @@
       Main Street Percussion
     </a>
     <div class="lg:hidden">
-      <button class="navbar-burger flex items-center text-green-600 p-3">
+      <button class="navbar-burger flex items-center text-gray-600 p-3">
         <svg
           class="block h-4 w-4 fill-current"
           viewBox="0 0 20 20"
@@ -21,9 +21,7 @@
         </svg>
       </button>
     </div>
-    <ul
-      class="hidden absolute top-1/2 left-1/2 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6"
-    >
+    <ul class="hidden lg:flex lg:items-center lg:w-auto lg:space-x-6">
       <li>
         <a class="text-lg text-gray-800 hover:text-gray-500" href="/">Home</a>
       </li>
@@ -38,10 +36,6 @@
         >
       </li>
     </ul>
-    <!-- <a
-      class="hidden lg:inline-block py-2 px-6 bg-green-500 hover:bg-green-600 text-sm text-white font-bold rounded-l-xl rounded-t-xl transition duration-200"
-      href="#">Learn More</a
-    > -->
   </nav>
   <div
     class="hidden navbar-menu fixed top-0 left-0 bottom-0 w-5/6 max-w-sm z-50"
