--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,5 @@
 ---
 import TopNav from "../components/TopNav.astro";
-import "../styles/global.css";
 
 export type props = {
   title: string;
@@ -14,7 +13,7 @@ const visualEditingEnabled =
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="generator" content={Astro.generator} />
     <title>Main Street Percussion</title>
   </head>
