--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import SnareDrum from "../assets/snare-drum.jpg";
-import Mallets from "../assets/mallets.jpg";
-import { Image } from "astro:assets";
+import ContactForm from "../components/ContactForm.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout>
@@ -13,6 +12,10 @@ import { Image } from "astro:assets";
       </h1>
       <div class="pt-4">
         <p class="pt-4">YOUR PERCUSSION RENTAL PEOPLE</p>
+        <button
+          class="mt-6 text-lg border-2 border-slate-100 px-4 py-2 flex justify-center align-center hover:bg-slate-100 hover:text-slate-900 hover:transition-all ease-in"
+          ><a href="#contact">GET STARTED</a>
+        </button>
       </div>
     </div>
   </section>
@@ -51,16 +54,23 @@ import { Image } from "astro:assets";
       >
         <h3>Ethnic Percussion</h3>
       </div>
-      <!-- <div
-        class="panel"
-        style="
-            background-image: url('https://images.unsplash.com/photo-1549880338-65ddcdfd017b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');
-          "
-      >
-        <h3>Mountains - Clouds</h3>
-      </div> -->
     </div>
   </section>
+  <section class="section-3" id="contact">
+    <div class="container">
+      <div class="w-4/5 md:w-2/3 flex flex-col items-center justify-start">
+        <h2 class="text-slate-100">Get In Touch!</h2>
+        <p class="text-slate-100">
+          Let us know if you have any questions about availability or our rental
+          policies. We'd love to hear from you.
+        </p>
+      </div>
+      <div class="w-4/5 md:w-2/3">
+        <ContactForm />
+      </div>
+    </div>
+  </section>
+  <Footer />
   <script>
     const panels = document.querySelectorAll(".panel");
 
@@ -113,11 +123,19 @@ import { Image } from "astro:assets";
       align-items: center;
     }
 
+    .section-3 {
+      background-color: rgba(20, 89, 58, 0.75);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
     .container {
       display: flex;
       flex-direction: column;
       align-items: center;
-      height: 100vh;
+      justify-content: center;
+      height: 80vh;
     }
 
     .panel {
@@ -132,6 +150,7 @@ import { Image } from "astro:assets";
       position: relative;
       transition: flex 0.3s ease-in;
       flex: 0.5;
+      cursor: pointer;
     }
 
     .panel.active {
@@ -179,6 +198,9 @@ import { Image } from "astro:assets";
     }
     .container {
       flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
     }
   }
 </style>
