cleanup and removes background-image from index

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -35,8 +35,8 @@
     ></textarea>
     <button
       type="submit"
-      class="text-slate-100 p-2 my-2 mx-auto w-1/2 rounded-md border border-slate-100 hover:scale-110"
-      >Submit</button
+      class="mt-6 text-lg text-slate-100 border-2 border-slate-100 px-4 py-2 flex justify-center align-center hover:bg-slate-100 hover:text-slate-900 hover:transition-all ease-in"
+      >SUBMIT</button
     >
     <div id="result" class="text-slate-900 pl-2"></div>
   </form>
