--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,9 @@ import Footer from "../components/Footer.astro";
             background-image: url('https://images.unsplash.com/photo-1707560693052-2c9d73bd1f1d?q=80&w=2080&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
           "
       >
-        <h3 class="text-slate-800">Concert Drums</h3>
+        <h3 class="text-slate-800 bg-slate-50 w-full opacity-50">
+          Concert Drums
+        </h3>
       </div>
       <div
         class="panel"
@@ -36,7 +38,9 @@ import Footer from "../components/Footer.astro";
             background-image: url('https://images.unsplash.com/photo-1710651648270-c0c900f49f30?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
           "
       >
-        <h3>Tuned Keyboards</h3>
+        <h3 class="text-slate-800 bg-slate-50 w-full opacity-50">
+          Tuned Keyboards
+        </h3>
       </div>
       <div
         class="panel"
@@ -44,7 +48,9 @@ import Footer from "../components/Footer.astro";
             background-image: url('https://images.unsplash.com/photo-1627769831079-835899bdd1c0?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
           "
       >
-        <h3>Accessories & Special Effects</h3>
+        <h3 class="text-slate-800 bg-slate-50 w-full opacity-50">
+          Accessories & Special Effects
+        </h3>
       </div>
       <div
         class="panel"
@@ -52,7 +58,9 @@ import Footer from "../components/Footer.astro";
             background-image: url('https://images.unsplash.com/photo-1530917203633-106d4a1a0967?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
           "
       >
-        <h3>Ethnic Percussion</h3>
+        <h3 class="text-slate-800 bg-slate-50 w-full opacity-50">
+          Ethnic Percussion
+        </h3>
       </div>
     </div>
   </section>
@@ -97,13 +105,15 @@ import Footer from "../components/Footer.astro";
   /* Mobile - 360px */
   @media only screen and (min-width: 0rem) {
     .section-1 {
-      height: 80vh;
+      height: 100vh;
 
       color: #d9d9d9;
       /* background-color: #218c5c; */
-      background:
-        linear-gradient(rgba(20, 89, 58, 0.75), rgba(23, 101, 66, 0.75)),
-        url("../assets/snare-drum.jpg") center/cover no-repeat;
+      background: linear-gradient(
+        rgba(20, 89, 58, 0.75),
+        rgba(23, 101, 66, 0.75)
+      );
+      /* url("../assets/snare-drum.jpg") center/cover no-repeat; */
       /* background-size: cover;
       background-repeat: no-repeat;
       background-position: 0% 40%;
@@ -153,15 +163,23 @@ import Footer from "../components/Footer.astro";
       cursor: pointer;
     }
 
+    .panel:hover {
+      transform: scale(1.01);
+      transition: 0.2s ease;
+    }
+
     .panel.active {
       flex: 5;
     }
 
     .panel h3 {
-      font-size: 24px;
+      font-size: 2rem;
       position: absolute;
       bottom: 20px;
-      left: 20px;
+      left: 0;
+      padding-left: 20px;
+      padding-top: 5px;
+      padding-bottom: 5px;
       opacity: 0;
     }
 
@@ -188,6 +206,10 @@ import Footer from "../components/Footer.astro";
   }
 
   @media only screen and (min-width: 37rem) {
+    .section-1 {
+      height: 80vh;
+    }
+
     .section-2 {
       margin: 0;
       display: flex;
