--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import Footer from "../components/Footer.astro";
           "
       >
         <h3 class="text-slate-800 bg-slate-50 w-full opacity-50">
-          Concert Drums
+          <a href="/category/concert-drum" class="active"> Concert Drums </a>
         </h3>
       </div>
       <div
@@ -39,7 +39,17 @@ import Footer from "../components/Footer.astro";
           "
       >
         <h3 class="text-slate-800 bg-slate-50 w-full opacity-50">
-          Tuned Keyboards
+          <a href="/category/tuned-keyboards"> Tuned Keyboards </a>
+        </h3>
+      </div>
+      <div
+        class="panel"
+        style="
+          background-image: url('https://images.unsplash.com/photo-1635178879499-4fcc79e1f9cc?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+        "
+      >
+        <h3 class="text-slate-800 bg-slate-50 w-full opacity-50">
+          <a href="/category/cymbals-and-gongs"> Cymbals & Gongs </a>
         </h3>
       </div>
       <div
@@ -49,7 +59,9 @@ import Footer from "../components/Footer.astro";
           "
       >
         <h3 class="text-slate-800 bg-slate-50 w-full opacity-50">
-          Accessories & Special Effects
+          <a href="/category/accessories-and-special-effects">
+            Accessories & Special Effects
+          </a>
         </h3>
       </div>
       <div
@@ -59,7 +71,9 @@ import Footer from "../components/Footer.astro";
           "
       >
         <h3 class="text-slate-800 bg-slate-50 w-full opacity-50">
-          Ethnic Percussion
+          <a href="/category/ethnic-drums-and-instruments">
+            Ethnic Percussion
+          </a>
         </h3>
       </div>
     </div>
@@ -82,7 +96,7 @@ import Footer from "../components/Footer.astro";
   <script>
     const panels = document.querySelectorAll(".panel");
 
-    panels.forEach((panel) => {
+    panels.forEach((panel, idx) => {
       panel.addEventListener("click", () => {
         removeActiveClasses();
         panel.classList.add("active");
@@ -90,7 +104,7 @@ import Footer from "../components/Footer.astro";
     });
 
     function removeActiveClasses() {
-      panels.forEach((panel) => {
+      panels.forEach((panel, idx) => {
         panel.classList.remove("active");
       });
     }
@@ -160,12 +174,10 @@ import Footer from "../components/Footer.astro";
       position: relative;
       transition: flex 0.3s ease-in;
       flex: 0.5;
-      cursor: pointer;
     }
 
     .panel:hover {
       transform: scale(1.01);
-      transition: 0.2s ease;
     }
 
     .panel.active {
@@ -175,7 +187,7 @@ import Footer from "../components/Footer.astro";
     .panel h3 {
       font-size: 2rem;
       position: absolute;
-      bottom: 20px;
+      bottom: 40px;
       left: 0;
       padding-left: 20px;
       padding-top: 5px;
@@ -186,6 +198,15 @@ import Footer from "../components/Footer.astro";
     .panel.active h3 {
       opacity: 1;
       transition: opacity 0.3s ease-in 0.3s;
+      cursor: pointer;
+    }
+
+    .panel a {
+      pointer-events: none;
+    }
+
+    .panel.active a {
+      pointer-events: auto;
     }
 
     h1 {
