Adds contact page

--- a/src/components/TopNav.astro
+++ b/src/components/TopNav.astro
@@ -26,13 +26,13 @@
         <a class="text-lg text-gray-800 hover:text-gray-500" href="/">Home</a>
       </li>
       <li>
-        <a class="text-lg text-gray-800 hover:text-gray-500" href="/about"
-          >Rental Policy</a
+        <a class="text-lg text-gray-800 hover:text-gray-500" href="/categories"
+          >Categories</a
         >
       </li>
       <li>
-        <a class="text-lg text-gray-800 hover:text-gray-500" href="/categories"
-          >Categories</a
+        <a class="text-lg text-gray-800 hover:text-gray-500" href="/contact"
+          >Contact</a
         >
       </li>
     </ul>
@@ -75,13 +75,13 @@
           <li class="mb-1">
             <a
               class="block p-4 text-lg font-semibold text-gray-400 hover:bg-green-50 hover:text-green-600 rounded"
-              href="/about">Rental Policy</a
+              href="/categories">Categories</a
             >
           </li>
           <li class="mb-1">
             <a
               class="block p-4 text-lg font-semibold text-gray-400 hover:bg-green-50 hover:text-green-600 rounded"
-              href="/categories">Categories</a
+              href="/contact">Contact</a
             >
           </li>
         </ul>
