--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,12 +1,23 @@
 ---
 import TopNav from "../components/TopNav.astro";
+// import { sanityClient } from "sanity:client";
+// import imageUrlBuilder from "@sanity/image-url";
 
-export type props = {
-  title: string;
-};
-const { title } = Astro.props;
-const visualEditingEnabled =
-  import.meta.env.PUBLIC_SANITY_VISUAL_EDITING_ENABLED == "true";
+// export type props = {
+//   title: string;
+// };
+// const categories = await sanityClient.fetch(`*[_type == "category"]{
+//         _id,
+//         title,
+//         slug,
+//         "instruments": *[_type == "instrument" && references(^._id)]{
+//           _id,
+//           title,
+//           slug,
+//         }
+//       }`);
+
+// console.log(categories);
 ---
 
 <html lang="en">
