--- a/src/pages/categories.astro
+++ b/src/pages/categories.astro
@@ -54,7 +54,7 @@ const categories = await sanityClient.fetch(`*[_type == "category"]{
     z-index: 1;
     display: flex;
     justify-content: center;
-    background-image: url("../assets/mallets.jpg");
+    background-color: rgba(20, 89, 58, 0.75);
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
